--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
   background-color: black;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  scroll-behavior: none;
 }
 
 .header {
@@ -10,7 +11,8 @@ body {
   align-items: center;
   align-content: center;
   text-align: center;
-  font-size: 500%;
+  font-size: xx-large;
+  width: 100vw;
   font-family: "Bungee Spice", cursive;
 }
 
@@ -20,8 +22,9 @@ body {
   align-items: center;
   align-content: center;
   text-align: center;
-  font-size: 500%;
+  font-size: xx-large;
   color: orange;
+  width: 100vw;
   font-family: "Nosifer", cursive;
 }
 
@@ -33,6 +36,7 @@ body {
   text-align: center;
   font-size: 500%;
   color: orange;
+  width: 100vw;
   font-family: "Nosifer", cursive;
 }
 iframe {
