--- a/style.css
+++ b/style.css
@@ -48,3 +48,11 @@ iframe {
   color: orange;
   width: 100%;
 }
+
+.pizza {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+}
